--- a/index.html
+++ b/index.html
@@ -39,34 +39,15 @@
       position: relative;
       display: inline-block;
       max-width: 90vw;
-      overflow: hidden;
-      height: auto;
-      max-height: 320px;
-      border-radius: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
     }
 
-    #carousel-container {
-      position: relative;
-      height: 100%;
-    }
-
-    #carousel-container img {
-      position: absolute;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      opacity: 0;
-      transition: opacity 0.4s ease-in-out;
+    #carousel-image {
       width: 100%;
       max-width: 300px;
       height: auto;
       border-radius: 20px;
-    }
-
-    #carousel-container img.active {
-      opacity: 1;
-      z-index: 1;
+      margin-top: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
     }
 
     .arrow {
@@ -90,7 +71,7 @@
     @media (max-width: 600px) {
       .arrow.left { left: -8vw; }
       .arrow.right { right: -8vw; }
-      #carousel-container img { max-width: 85vw; }
+      #carousel-image { max-width: 85vw; }
     }
 
     button {
@@ -144,14 +125,8 @@
     }
 
     @keyframes floatUp {
-      0% {
-        transform: translateY(0) scale(1);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-100vh) scale(1.8);
-        opacity: 0;
-      }
+      0% { transform: translateY(0) scale(1); opacity: 1; }
+      100% { transform: translateY(-100vh) scale(1.8); opacity: 0; }
     }
 
     @keyframes fadeIn {
@@ -161,21 +136,19 @@
 
     .sparkle {
       position: fixed;
-      font-size: 20px;
+      width: 8px;
+      height: 8px;
+      background: radial-gradient(white, transparent);
+      border-radius: 50%;
+      opacity: 0.8;
       pointer-events: none;
-      animation: sparkleFade 2s ease-out forwards;
-      z-index: 999;
+      animation: sparkleFade 2s linear forwards;
+      z-index: 3;
     }
 
     @keyframes sparkleFade {
-      0% {
-        transform: scale(1) translateY(0);
-        opacity: 1;
-      }
-      100% {
-        transform: scale(2) translateY(-50px);
-        opacity: 0;
-      }
+      0% { transform: scale(1); opacity: 1; }
+      100% { transform: scale(0.5); opacity: 0; }
     }
   </style>
 </head>
@@ -187,13 +160,7 @@
 
     <div class="image-wrapper">
       <div class="arrow left" onclick="changeImage(-1)">❮</div>
-      <div id="carousel-container">
-        <img src="amma.jpg" class="active">
-        <img src="pic2.jpg">
-        <img src="pic3.jpg">
-        <img src="pic4.jpg">
-        <img src="pic5.jpg">
-      </div>
+      <img id="carousel-image" src="amma.jpg" alt="My Amma">
       <div class="arrow right" onclick="changeImage(1)">❯</div>
     </div>
 
@@ -223,13 +190,19 @@
       bgm.play();
     });
 
-    const images = document.querySelectorAll("#carousel-container img");
+    // 🔁 Updated Image carousel - no delay, no blank screen
+    const imageList = ["amma.jpg", "pic2.jpg", "pic3.jpg", "pic4.jpg", "pic5.jpg"];
     let currentIndex = 0;
 
     function changeImage(direction) {
-      images[currentIndex].classList.remove("active");
-      currentIndex = (currentIndex + direction + images.length) % images.length;
-      images[currentIndex].classList.add("active");
+      const img = document.getElementById("carousel-image");
+      currentIndex = (currentIndex + direction + imageList.length) % imageList.length;
+
+      const newImg = new Image();
+      newImg.src = imageList[currentIndex] + `?v=${Date.now()}`;
+      newImg.onload = () => {
+        img.src = newImg.src;
+      };
     }
 
     // Confetti
@@ -300,7 +273,7 @@
       animateConfetti();
     }
 
-    // Floating hearts
+    // Hearts
     function spawnHeart() {
       const heart = document.createElement("div");
       heart.className = "heart";
@@ -315,22 +288,19 @@
       if (Math.random() < 0.4) spawnHeart();
     }, 600);
 
-    // Sparkles (star shapes)
-    function createSparkle() {
+    // Sparkles
+    function spawnSparkle() {
       const sparkle = document.createElement("div");
       sparkle.className = "sparkle";
-      sparkle.innerText = "✦";
-      sparkle.style.left = Math.random() * window.innerWidth + "px";
-      sparkle.style.top = Math.random() * window.innerHeight + "px";
-      sparkle.style.color = `hsl(${Math.random() * 360}, 100%, 80%)`;
-      sparkle.style.fontSize = Math.random() * 15 + 18 + "px";
+      sparkle.style.left = Math.random() * 100 + "vw";
+      sparkle.style.top = Math.random() * 100 + "vh";
       document.body.appendChild(sparkle);
       setTimeout(() => sparkle.remove(), 2000);
     }
 
     setInterval(() => {
-      if (Math.random() < 0.4) createSparkle();
-    }, 700);
+      if (Math.random() < 0.2) spawnSparkle();
+    }, 500);
   </script>
 </body>
 </html>
